✨ feat(environment): add env interface
